Fix hero container padding on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -308,6 +308,15 @@ h6 {
         line-height: 24px;
         margin-bottom: 30px;
     }
+    #hero .hero-container {
+        position: relative;
+        z-index: 2;
+        min-width: 300px;
+        padding: 60px 0;
+        overflow: hidden;
+        margin-top: 30px;
+        padding-left: 80px;
+    }
 }
 
 /*--------------------------------------------------------------
